Fixed body overflow

--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Yellowtail|Quicksand:400,500');
+
+html
+{
+    overflow-x: hidden;
+
+}
+
 body
 {
     font-family: 'Quicksand', sans-serif;
     background-color: hsl(43, 90%, 90%);
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
 }
 
 h1,h2,h3,h4
